Add TimeTrigger endpoints
