# src/AutoHome.Server/AutoMapping.cs
@@ -1,5 +1,6 @@
 ﻿using AutoHome.Data.Entities;
 using AutoHome.Server.Endpoints.Devices;
+using AutoHome.Server.Endpoints.TimeTriggers;
 using AutoMapper;
 
 namespace AutoHome.Server;
@@ -10,11 +11,18 @@ public class AutoMapping : Profile
 	{
 		CreateMap<AddDeviceRequest, Device>();
 		CreateMap<UpdateDeviceRequest, Device>();
-
 		CreateMap<Device, AddDeviceResult>();
 		CreateMap<Device, GetDeviceResult>();
 		CreateMap<Device, ListDevicesResult>();
 		CreateMap<Device, UpdateDeviceRequest>();
 		CreateMap<Device, UpdateDeviceResult>();
+
+		CreateMap<AddTimeTriggerRequest, TimeTrigger>();
+		CreateMap<UpdateTimeTriggerRequest, TimeTrigger>();
+		CreateMap<TimeTrigger, AddTimeTriggerResult>();
+		CreateMap<TimeTrigger, GetTimeTriggerResult>();
+		CreateMap<TimeTrigger, ListTimeTriggersResult>();
+		CreateMap<TimeTrigger, UpdateTimeTriggerRequest>();
+		CreateMap<TimeTrigger, UpdateTimeTriggerResult>();
 	}
 }
